--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <html>
 <head>
-    <script src="https://cdn.rawgit.com/riot/riot/master/riot+compiler.min.js"></script>
-    <script src="main.js"></script>
-    <script type="riot/tag" src="tags.tag"></script>
+    <script src="Dexie.min.js"></script>
     <script src="underscore-min.js"></script>
+    <script src="riot+compiler.min.js"></script>
+    <script src="util.js"></script>
+    <script src="store.js"></script>
+    <script src="bookmark.js"></script>
+    <script src="commands.js"></script>
+    <script type="riot/tag" src="tags.tag"></script>
     <link rel="stylesheet" type="text/css" href="main.css"></link>
 
 </head>
