--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <html>
 <head>
-    <script src="Dexie.min.js"></script>
-    <script src="underscore-min.js"></script>
-    <script src="riot+compiler.min.js"></script>
-    <script src="util.js"></script>
-    <script src="store.js"></script>
-    <script src="bookmark.js"></script>
-    <script src="commands.js"></script>
+    <script src="lib/Dexie.min.js"></script>
+    <script src="lib/underscore-min.js"></script>
+    <script src="lib/riot+compiler.min.js"></script>
+    <script src="js/util.js"></script>
+    <script src="js/store.js"></script>
+    <script src="js/bookmark.js"></script>
+    <script src="js/commands.js"></script>
     <script type="riot/tag" src="tags.tag"></script>
     <link rel="stylesheet" type="text/css" href="main.css"></link>
 
