--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="js/store.js"></script>
     <script src="js/bookmark.js"></script>
     <script src="js/commands.js"></script>
+    <script src="js/main.js"></script>
     <script type="riot/tag" src="tags.tag"></script>
     <link rel="stylesheet" type="text/css" href="main.css"></link>
 
