--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script src="lib/riot+compiler.min.js"></script>
     <script src="js/util.js"></script>
     <script src="js/store.js"></script>
-    <script src="js/bookmark.js"></script>
+    <script src="js/bookmark2.js"></script>
     <script src="js/commands.js"></script>
     <script src="js/main.js"></script>
     <script type="riot/tag" src="tags.tag"></script>
