two-level navigation - initial

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <script src="js/bookmark2.js"></script>
     <script src="js/commands.js"></script>
     <script src="js/main.js"></script>
-    <script type="riot/tag" src="tags.tag"></script>
+    <script type="riot/tag" src="app.tag"></script>
+    <script type="riot/tag" src="bookmarks.tag"></script>
     <link rel="stylesheet" type="text/css" href="main.css"></link>
 
 </head>
